--- a/f/style.css
+++ b/f/style.css
@@ -1,6 +1,6 @@
 #canvas
 {
-    background-color:#30c0df;
+    background-color:#052e5d;
     border: 2px solid black;
     display: block;
     margin: auto;
